Replace deprecated method/constructor calls (CodeQL java/deprecated-call)
Migrate 77 java/deprecated-call code scanning alerts to the recommended
non-deprecated APIs:

- Class.newInstance() -> getDeclaredConstructor().newInstance()
- ResourceException.getException -> newResourceException
- Commons IO FileUtils/IOUtils calls -> explicit StandardCharsets.UTF_8;
  new WildcardFileFilter(...) -> WildcardFileFilter.builder()
- CrestHttp.newHttpHandler(ConnectionFactory) ->
  newHttpHandler(Applications.simpleCrestApplication(factory, null, null))
- Duration(Long, TimeUnit) internal uses -> private Duration(long, TimeUnit)
- Resources.newSingleton/newCollection -> newHandler
- asciidoctorj OptionsBuilder.options()/AttributesBuilder.attributes()/get()
  -> Options.builder()/Attributes.builder()/build()
- JsonValue.asURI()/asEnum() -> as(JsonValueFunctions.uri()/enumConstant())
- Jackson: TypeFactory.constructParametrizedType -> constructParametricType;
  new JsonMappingException(...) -> JsonMappingException.from(parser, ...);
  AsPropertyTypeDeserializer 5-arg ctor -> 6-arg with JsonTypeInfo.As.PROPERTY
- persistit: Value.setMaximumSize / Configuration.isUseOldVSpec accessed via
  package-private internal methods; Persistit.initialize(Properties) ->
  setProperties(props) + initialize()
- Object.finalize() overrides -> drop no-op super.finalize() (close() kept)
- EncryptedJwtBuilder.sign -> signedWith
- StringUtils.containsIgnoreCase -> Strings.CI.contains
- TestNG ITestNGMethod.getInstances() -> getInstance()
- Rhino ScriptRuntime.getMessage1 -> getMessageById

All replacements preserve existing behavior. Affected modules compile.

The remaining 8 alerts are intentionally left unchanged and dismissed, since
a safe fix would change behavior or require a disproportionate migration for a
note-level finding: io.swagger Response.schema (x3, would alter generated
OpenAPI output), Thread.stop in the persistit inspector (deliberate runaway
thread termination with no cooperative e